Changed name back to Arwa and getting files ready to be pushed into Git

--- a/ClassScheduleActivity.Rmd
+++ b/ClassScheduleActivity.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Markdown Class Schedule"
-author: "Beckman"
+author: "Arwa Hararwala"
 date: "January 31, 2020"
 output: 
   html_notebook:
