Forgot to erase teacher comments on the templete

--- a/ClassScheduleActivity.Rmd
+++ b/ClassScheduleActivity.Rmd
@@ -8,7 +8,7 @@ output:
     fig_width: 5
 ---
 
-# Class Schedule (Complete Example)
+# Class Schedule
 
 ### STAT 184: Introduction to R Programming
 
